<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:theme="@style/Theme.AppCompat.Light"
    android:layout_centerVertical="true"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="75dp"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:text="SIGN IN TO TRACE"
            android:typeface="sans"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@mipmap/lancher"/>

        <RelativeLayout
            android:id="@+id/wrapper_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColorHint="@color/gray">

            <EditText
                android:id="@+id/email"
                android:shadowColor="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColor="#3a3a3a"
                android:textSize="15sp" />
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/wrapper_email">

            <RelativeLayout
                android:id="@+id/wrapper_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="4dp"
                android:textColorHint="#3a3a3a">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textColor="#3a3a3a"
                    android:textSize="15sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:clickable="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginEnd="36dp"
                android:layout_marginRight="36dp"
                android:text="@string/forgot_password" />
        </FrameLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/password_layout"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="#CD5C5C"
            android:text="@string/signin"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/social_buttons"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_below="@id/loginBtn"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">
            <ImageButton
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:id="@+id/google_login"
                android:scaleType="fitCenter"
                android:layout_weight=".5"
                android:padding="0dp"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/google_light"/>

            <ImageButton
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:id="@+id/facebook_login"
                android:scaleType="fitCenter"
                android:layout_weight=".5"
                android:padding="0dp"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/facebook"/>
        </LinearLayout>

        <TextView
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/social_buttons"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/signup_link"
            android:textAllCaps="true"
            android:textSize="15sp" />

    </RelativeLayout>

</ScrollView>
